<resources><string name="app_name">My Spectrum</string><string name="more_p1">Charles Tatum II has been writing Android applications since 2008. Ever since Google introduced the G1 and the Android Market, he has created a variety of public-facing offerings.</string><string name="more_p2">His best-performing app ever is Checkbook Genius which, when introduced originally for free, was downloaded over 38,000 times (for which Google awarded him a free Nexus smartphone). A later paid version has achieved over 5,000 licenses and is still available today in the Google Play Store.</string><string name="more_p3">His background also includes the iOS (iPhone) and UWP (Windows 10) platforms. He has independently produced and released two Xamarin applications - a pocket scorekeeper called TapScore, and his first ever game, Card Counters, which combines the card games Blackjack and Memory (aka Concentration).</string><string name="more_p4">Other knowledge in his skill set includes database (including SQLite, the de facto standard for mobile apps), web services, web design, and documentation/technical writing.</string><string name="more_p5">This developer would enjoy sharing his insights, background and creativity with the Spectrum organization. Why else would he include a shameless self-plug in the middle of this app? </string></resources>