<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:layout_marginTop="17dp" xmlns:android="http://schemas.android.com/apk/res/android"><ScrollView android:id="@+id/ScrollView01" android:layout_height="360dp" android:layout_width="fill_parent"><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:layout_marginTop="0dp" android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="left" android:text="@string/more_p1" android:textColor="@android:color/black" /><TextView android:layout_marginTop="10dp" android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="left" android:text="@string/more_p2" android:textColor="@android:color/black" /><TextView android:layout_marginTop="10dp" android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="left" android:text="@string/more_p3" android:textColor="@android:color/black" /><TextView android:layout_marginTop="10dp" android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="left" android:text="@string/more_p4" android:textColor="@android:color/black" /><TextView android:layout_marginTop="10dp" android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="left" android:text="@string/more_p5" android:textColor="@android:color/black" /></LinearLayout></ScrollView><Button android:id="@+id/btnSeeApps" android:textColor="@color/myAccent" android:layout_marginTop="15dp" android:text="Look At His Other Apps!" android:layout_width="match_parent" android:layout_height="wrap_content" /><Button android:id="@+id/btnBack" android:text="Back" android:layout_width="match_parent" android:layout_height="wrap_content" /></LinearLayout>